<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding"
    tools:context=".ui.activity.DetailActivity">

    <ImageView
        android:id="@+id/detail_iv_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/detail_picture"
        android:transitionName="@string/transition_photo"
        app:layout_constraintBottom_toTopOf="@id/detail_tv_name"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@drawable/storyapp" />

    <TextView
        android:id="@+id/detail_tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:transitionName="@string/transition_name"
        app:layout_constraintEnd_toEndOf="@id/detail_iv_photo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/detail_iv_photo"
        app:layout_constraintTop_toBottomOf="@id/detail_iv_photo"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/detail_tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/detail_iv_photo"
        app:layout_constraintStart_toStartOf="@id/detail_iv_photo"
        app:layout_constraintTop_toBottomOf="@id/detail_tv_name"
        tools:text="Lorem Ipsum" />


</androidx.constraintlayout.widget.ConstraintLayout>