<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding"
    tools:context=".ui.activity.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_iv_app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/storyapp"
        app:layout_constraintBottom_toTopOf="@id/register_tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/register_tv_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvWarn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_iv_app_icon" />

    <TextView
        android:id="@+id/tvWarn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:maxLines="1"
        android:text="@string/create_warn"
        app:layout_constraintTop_toBottomOf="@id/register_tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_name_field"/>

    <com.example.storiesapplication.ui.customview.NameEt
        android:id="@+id/register_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/register_email_field"
        app:layout_constraintTop_toBottomOf="@id/tvWarn" />

    <com.example.storiesapplication.ui.customview.EmailEt
        android:id="@+id/register_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/register_password_field"
        app:layout_constraintTop_toBottomOf="@id/register_name_field" />

    <com.example.storiesapplication.ui.customview.PasswordEt
        android:id="@+id/register_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/register_btn_register"
        app:layout_constraintTop_toBottomOf="@id/register_email_field" />

    <Button
        android:id="@+id/register_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_field" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn_register">

        <TextView
            android:id="@+id/tvIsHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_is_have_account"/>

        <TextView
            android:id="@+id/tvToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/yellownew"
            android:layout_marginStart="4dp"
            android:text="@string/act_to_login"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>