<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding"
    app:layoutDescription="@xml/activity_login_scene"
    tools:context=".ui.activity.LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_iv_app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/storyapp"
        app:layout_constraintBottom_toTopOf="@id/login_tv_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/login_tv_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_iv_app_icon" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_login_welcome_desc"
        app:layout_constraintBottom_toTopOf="@+id/login_email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv_app_name"
        android:textSize="15sp"
        android:textAlignment="center"/>

    <com.example.storiesapplication.ui.customview.EmailEt
        android:id="@+id/login_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/login_password_field"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <com.example.storiesapplication.ui.customview.PasswordEt
        android:id="@+id/login_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:padding="12.5dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintTop_toBottomOf="@id/login_email_field" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_field"
        tools:layout_editor_absoluteX="13dp" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn_login">

        <TextView
            android:id="@+id/tvIsHaventAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_is_havent_account"/>

        <TextView
            android:id="@+id/login_tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/yellownew"
            android:layout_marginStart="4dp"
            android:text="@string/tvRegister"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:elevation="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>